--- a/website/src/styles/landing.module.sass
+++ b/website/src/styles/landing.module.sass
@@ -76,7 +76,7 @@
 .banner
     background: var(--color-theme)
     color: var(--color-back)
-    padding: 5rem
+    padding: 1rem 5rem
     margin-bottom: var(--spacing-md)
     background-size: cover
 
@@ -128,14 +128,17 @@
         padding-right: 2rem
 
 @include breakpoint(max, md)
+    .banner
+        padding: 1rem 3rem
+
     .banner-content
         display: block
 
     .banner-text
         padding-top: 0
 
-    .col
-        grid-column: 1 / span 2
+    .grid
+        grid-template-columns: 1fr !important
 
 .banner-button
     margin-bottom: var(--spacing-sm)
