Add nlp.batch_size setting
Add a default `batch_size` setting for `Language.pipe` and
`Language.evaluate` as `nlp.batch_size`.

--- a/spacy/cli/templates/quickstart_training.jinja
+++ b/spacy/cli/templates/quickstart_training.jinja
@@ -19,6 +19,7 @@ lang = "{{ lang }}"
 {%- set full_pipeline = ["transformer" if use_transformer else "tok2vec"] + components %}
 pipeline = {{ full_pipeline|pprint()|replace("'", '"')|safe }}
 tokenizer = {"@tokenizers": "spacy.Tokenizer.v1"}
+batch_size = {{ 128 if hardware == "gpu" else 1000 }}
 
 [components]
 
