Update docs and add support for legacy style

--- a/website/src/styles/layout.sass
+++ b/website/src/styles/layout.sass
@@ -54,6 +54,11 @@
     --color-theme-nightly-light: hsla(257, 99%, 67%, 0.06)
     --color-theme-nightly-opaque: hsla(257, 99%, 67%, 0.11)
 
+    --color-theme-legacy: #6f6f6f
+    --color-theme-legacy-dark: hsl(257, 0%, 35%)
+    --color-theme-legacy-light: hsla(257, 0%, 67%, 0.06)
+    --color-theme-legacy-opaque: hsla(257, 0%, 67%, 0.11)
+
     // Regular colors
     --color-back: hsl(0, 0%, 100%)
     --color-front: hsl(213, 15%, 12%)
@@ -117,6 +122,12 @@
     --color-theme-dark: var(--color-theme-nightly-dark)
     --color-theme-light: var(--color-theme-nightly-light)
     --color-theme-opaque: var(--color-theme-nightly-opaque)
+
+.theme-legacy
+    --color-theme: var(--color-theme-legacy)
+    --color-theme-dark: var(--color-theme-legacy-dark)
+    --color-theme-light: var(--color-theme-legacy-light)
+    --color-theme-opaque: var(--color-theme-legacy-opaque)
 
 
 /* Fonts */
