Update website to support legacy state [ci skip]

--- a/website/src/styles/alert.module.sass
+++ b/website/src/styles/alert.module.sass
@@ -8,6 +8,9 @@
     font: var(--font-size-sm)/var(--line-height-md) var(--font-primary)
     text-align: center
     padding: 1rem
+    box-shadow: var(--box-shadow)
+    border-top: 2px solid
+    color: var(--color-theme)
 
 .warning
     --alert-bg: var(--color-yellow-light)
