--- a/website/src/styles/layout.sass
+++ b/website/src/styles/layout.sass
@@ -47,6 +47,11 @@
     --color-theme-purple-light: hsla(255, 61%, 54%, 0.06)
     --color-theme-purple-opaque: hsla(255, 61%, 54%, 0.11)
 
+    --color-theme-legacy: #6f6f6f
+    --color-theme-legacy-dark: hsl(257, 0%, 35%)
+    --color-theme-legacy-light: hsla(257, 0%, 67%, 0.06)
+    --color-theme-legacy-opaque: hsla(257, 0%, 67%, 0.11)
+
     // Regular colors
     --color-back: hsl(0, 0%, 100%)
     --color-front: hsl(213, 15%, 12%)
@@ -105,6 +110,12 @@
     --color-theme-dark: var(--color-theme-purple-dark)
     --color-theme-light: var(--color-theme-purple-light)
     --color-theme-opaque: var(--color-theme-purple-opaque)
+
+.theme-legacy
+    --color-theme: var(--color-theme-legacy)
+    --color-theme-dark: var(--color-theme-legacy-dark)
+    --color-theme-light: var(--color-theme-legacy-light)
+    --color-theme-opaque: var(--color-theme-legacy-opaque)
 
 
 /* Fonts */
