Update GitHub link [ci skip]

--- a/website/src/styles/navigation.module.sass
+++ b/website/src/styles/navigation.module.sass
@@ -68,6 +68,14 @@
     height: 100%
     padding-right: 2rem
 
+.github
+    text-transform: initial
+    margin-top: 0.25rem
+    margin-left: 1.5em !important
+
+    & > span
+        min-width: 100px
+
 .dropdown
     --dropdown-text-color: var(--color-theme)
     font-family: var(--font-secondary)
