Revert "Backport bugfixes from v3.1.0 to v3.0 (#8739)"
This reverts commit f94168a41e41dc67a3724a33d0e10a45423085dc.

--- a/spacy/cli/templates/quickstart_training.jinja
+++ b/spacy/cli/templates/quickstart_training.jinja
@@ -418,7 +418,7 @@ compound = 1.001
 
 [initialize]
 {% if use_transformer or optimize == "efficiency" or not word_vectors -%}
-vectors = ${paths.vectors}
+vectors = null
 {% else -%}
 vectors = "{{ word_vectors }}"
 {% endif -%}
