--- a/spacy/cli/templates/quickstart_training.jinja
+++ b/spacy/cli/templates/quickstart_training.jinja
@@ -36,6 +36,8 @@ factory = "transformer"
 name = "{{ transformer["name"] }}"
 tokenizer_config = {"use_fast": true}
 transformer_config = {"output_attentions": false}
+mixed_precision = false
+grad_scaler_config = {"init_scale": 32768}
 
 [components.transformer.model.get_spans]
 @span_getters = "spacy-transformers.strided_spans.v1"
